--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "vue3snippets.enable-compile-vue-file-on-did-save-code": true,
+  "vue3snippets.enable-compile-vue-file-on-did-save-code": false,
   "vue3snippets.singleQuote":true,
   "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
 }
